antlr_basics/antlr_visitor/g4_file/Calculation.g4
grammar Calculation;

import numbers;

program: statement+;

statement: expression
    | IDENTIFIER '=' expression;

IDENTIFIER: [a-zA-Z]+;

expression: expression ('*' | '/') expression
    | expression ('+' | '-') expression
    | ('+' | '-')? Number
    | '(' expression ')'
    ;

NEWLINE: '\r'?'\n' -> skip;
SPACES: [ \t]+ -> skip;
